@@ -28,6 +28,14 @@
 ## Server section with all kinds of settings for the LCDd server ##
 [server]
 
+# Where can we find the driver modules ?
+# IMPORTANT: Make sure to change this setting to reflect your
+#            specific setup! Otherwise LCDd won't be able to find
+#            the driver modules and will thus not be able to
+#            function properly.
+# NOTE: Always place a slash as last character !
+DriverPath=server/drivers/
+
 # Tells the server to load the given drivers. Multiple lines can be given.
 # The name of the driver is case sensitive and determines the section
 # where to look for further configuration options of the specific driver
@@ -43,6 +51,14 @@
 #   serialVFD, sli, stv5730, svga, t6963, text, tyan, ula200, xosd
 Driver=curses
 
+# Where can we find the driver modules ?
+# IMPORTANT: Make sure to change this setting to reflect your
+#            specific setup! Otherwise LCDd won't be able to find
+#            the driver modules and will thus not be able to
+#            function properly.
+# NOTE: Always place a slash as last character !
+DriverPath=server/drivers/
+
 # Tells the driver to bind to the given interface
 Bind=127.0.0.1
 
@@ -55,28 +71,12 @@ Port=13666
 # Should we report to syslog instead of stderr ? Default: no
 #ReportToSyslog=yes
 
-# Sets the default time in seconds to displays a screen.
-WaitTime=5
-
 # User to run as.  LCDd will drop its root priviledges,
 # if any, and run as this user instead.
 User=nobody
 
-# If yes, the the serverscreen will be rotated as a usual info screen. If no,
-# it will be a background screen, only visible when no other screens are
-# active.
-#ServerScreen=no
-
 # The server will stay in the foreground if set to true.
 #Foreground=no
-
-# Where can we find the driver modules ?
-# IMPORTANT: Make sure to change this setting to reflect your
-#            specific setup! Otherwise LCDd won't be able to find
-#            the driver modules and will thus not be able to
-#            function properly.
-# NOTE: Always place a slash as last character !
-DriverPath=server/drivers/
 
 # Hello message: each entry represents a display line; default: builtin
 #Hello="  Welcome to"
@@ -85,6 +85,23 @@ DriverPath=server/drivers/
 # GoodBye message: each entry represents a display line; default: builtin
 #GoodBye="Thanks for using"
 #GoodBye="   LCDproc!"
+
+# Sets the default time in seconds to displays a screen.
+WaitTime=5
+
+# If yes, the the serverscreen will be rotated as a usual info screen. If no,
+# it will be a background screen, only visible when no other screens are
+# active.
+#ServerScreen=no
+
+# set master backlight setting [default: open; legal: off, open, on]
+#Backlight=open
+
+# set master heartbeat setting [default: open; legal: off, open, on]
+#Heartbeat=open
+
+# set title scrolling speed [default: 10; legal: 0-10]
+#TitleSpeed=10
 
 # The "...Key=" lines define what the server does with keypresses that
 # don't go to any client.
