@@ -36,6 +36,7 @@
 #endif
 
 #define max(a,b) (((a) > (b)) ? (a) : (b))
+#define min(a,b) (((a) < (b)) ? (a) : (b))
 
 /*********************************************************************
  * Data definitions of the menustuff
